--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "firebase": "^7.20.0",
+    "moment": "^2.27.0",
+    "vue": "^2.6.12",
+    "vue-momentjs": "^1.0.0",
+    "vuefire": "^2.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
